# optimusai-

./: .gitignore  BUILD.md  DEPLOY_ONREZA.md  README.md  onreza.toml  package-lock.json  package.json  pyproject.toml  requirements.txt  server.cjs  server.py
lib/: agent.cjs  creative_ab.cjs  db.cjs  metrics.cjs  optimizer.cjs  simulator.cjs  store.cjs
scripts/: build-onreza.cjs
src/optimus/: __init__.py  cli.py  main.py
src/optimus/adapters/: base.py
src/optimus/adapters/mock/: simulator.py  yandex.py
src/optimus/agent/: loop.py
src/optimus/metrics/: calculator.py  store.py
src/optimus/models/: __init__.py  schemas.py
src/optimus/optimizer/: bandit.py  creative_ab.py  engine.py  rules.py
static/: index.html
tests/: test_agent_loop.py  test_creative_ab.py  test_simulator.py
